--- a/code/day-4/flexbox.html
+++ b/code/day-4/flexbox.html
@@ -14,7 +14,7 @@
       padding: 20px;
       height: 100vh;
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       justify-content: space-between;
       align-items: flex-start;
     }
